--- a/hw_6_pandas(part2).ipynb
+++ b/hw_6_pandas(part2).ipynb
@@ -2678,13 +2678,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "id": "6e9cbbff",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>name</th>\n",
+       "      <th>transaction</th>\n",
+       "      <th>minute</th>\n",
+       "      <th>true_minute</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-03-02 00:37:20</td>\n",
+       "      <td>Ekaterina_Petrova</td>\n",
+       "      <td>cancelled</td>\n",
+       "      <td>37</td>\n",
+       "      <td>37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-03-02 00:59:09</td>\n",
+       "      <td>Irina_Fedorova</td>\n",
+       "      <td>successfull</td>\n",
+       "      <td>59</td>\n",
+       "      <td>59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-03-02 01:06:14</td>\n",
+       "      <td>Ekaterina_Smirnova</td>\n",
+       "      <td>successfull</td>\n",
+       "      <td>6</td>\n",
+       "      <td>66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-03-02 00:02:58</td>\n",
+       "      <td>Lolita_Polyanova</td>\n",
+       "      <td>cancelled</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-03-02 00:17:52</td>\n",
+       "      <td>Julia_Smirnova</td>\n",
+       "      <td>cancelled</td>\n",
+       "      <td>17</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2020-03-02 01:09:55</td>\n",
+       "      <td>Irina_Polyanova</td>\n",
+       "      <td>cancelled</td>\n",
+       "      <td>9</td>\n",
+       "      <td>69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2020-03-02 00:54:12</td>\n",
+       "      <td>Olga_Lesnova</td>\n",
+       "      <td>successfull</td>\n",
+       "      <td>54</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2020-03-02 00:18:43</td>\n",
+       "      <td>Irina_Lesnova</td>\n",
+       "      <td>successfull</td>\n",
+       "      <td>18</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2020-03-02 00:06:10</td>\n",
+       "      <td>Vasilisa_Petrova</td>\n",
+       "      <td>successfull</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2020-03-02 00:47:06</td>\n",
+       "      <td>Olga_Petrova</td>\n",
+       "      <td>successfull</td>\n",
+       "      <td>47</td>\n",
+       "      <td>47</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 date                name  transaction  minute  true_minute\n",
+       "0 2020-03-02 00:37:20   Ekaterina_Petrova    cancelled      37           37\n",
+       "1 2020-03-02 00:59:09      Irina_Fedorova  successfull      59           59\n",
+       "2 2020-03-02 01:06:14  Ekaterina_Smirnova  successfull       6           66\n",
+       "3 2020-03-02 00:02:58    Lolita_Polyanova    cancelled       2            2\n",
+       "4 2020-03-02 00:17:52      Julia_Smirnova    cancelled      17           17\n",
+       "5 2020-03-02 01:09:55     Irina_Polyanova    cancelled       9           69\n",
+       "6 2020-03-02 00:54:12        Olga_Lesnova  successfull      54           54\n",
+       "7 2020-03-02 00:18:43       Irina_Lesnova  successfull      18           18\n",
+       "8 2020-03-02 00:06:10    Vasilisa_Petrova  successfull       6            6\n",
+       "9 2020-03-02 00:47:06        Olga_Petrova  successfull      47           47"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Изучите представленный график. Помогите коллеге разобраться, есть ли в данных ошибка, или же всё хорошо.\n",
-    "# Если в данные закралась ошибка, исправьте её и сохраните правильное число минут, прошедших с начала дня, в колонку true_minute.\n"
+    "# Если в данные закралась ошибка, исправьте её и сохраните правильное число минут, прошедших с начала дня, в колонку true_minute.\n",
+    "df_upd.true_minute = df_upd.date.dt.hour * 60 + df_upd.minute\n",
+    "df_upd.head(10)"
    ]
   },
   {
